--- a/style.css
+++ b/style.css
@@ -17,3 +17,27 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned
 with others.
 */
+
+body {
+    font-size: 22px;
+    font-weight: 300;
+    padding: 1em;
+}
+
+.wp-site-blocks {
+    max-width: 990px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a {
+    text-decoration: none;
+    border-bottom: 2px solid currentColor;
+    font-weight: 600;
+}
+
+a:focus {
+    outline: 2px solid;
+    outline-offset: 2px;
+    border-bottom-color: transparent;
+}
