--- a/style.css
+++ b/style.css
@@ -19,6 +19,111 @@ Use it to make something cool, have fun, and share what you've learned
 with others.
 */
 
+:root {
+    font-size: 22px;
+    --contentWidth: 900px;
+    --wideWidth: calc(1.5 * var(--contentWidth));
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    line-height: var(--wp--preset--line-height--medium);
+}
+
+html,
+body {
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+h1 {
+    font-size: var(--wp--preset--font-size--huge);
+    line-height: var(--wp--preset--line-height--small);
+}
+
+h2 {
+    font-size: var(--wp--preset--font-size--large);
+    line-height: var(--wp--preset--line-height--small);
+}
+
+h3 {
+    font-size: var(--wp--preset--font-size--medium);
+    line-height: var(--wp--preset--line-height--medium);
+}
+
+h4 {
+    font-size: var(--wp--preset--font-size--normal);
+    line-height: var(--wp--preset--line-height--medium);
+}
+
+h5 {
+    font-size: var(--wp--preset--font-size--small);
+    line-height: var(--wp--preset--line-height--large);
+}
+
+h6 {
+    font-size: var(--wp--preset--font-size--small);
+    line-height: var(--wp--preset--line-height--large);
+}
+
+.wp-site-blocks {
+    --paddingHorizontal: 1em;
+    padding: 0 var(--paddingHorizontal);
+}
+
+.wp-site-blocks > *:not(.wp-block-post-content),
+.wp-site-blocks > .wp-block-post-content > * {
+    max-width: var(--contentWidth);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-site-blocks .alignwide {
+    width: var(--wideWidth);
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-site-blocks .alignfull {
+    transform: translateX(calc(0px - var(--paddingHorizontal)));
+    width: calc(100% + 2 * var(--paddingHorizontal));
+    max-width: calc(100% + 2 * var(--paddingHorizontal));
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.aligncenter {
+    text-align: center;
+}
+
+.wp-site-blocks .alignleft {
+    float: left;
+    margin-left: calc(50% - var(--contentWidth) / 2);
+    margin-right: 1em;
+}
+
+.wp-site-blocks .alignright {
+    float: right;
+    margin-right: calc(50% - var(--contentWidth) / 2)
+    margin-left: 1em;
+}       
+
+.wp-site-blocks a {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    font-weight: 600;
+}
+
+.wp-site-blocks a:focus {
+    outline: 2px solid;
+    outline-offset: 2px;
+    border-bottom-color: transparent;
+}
+
 /* Text meant only for screen readers. */
 .screen-reader-text {
 	border: 0;
@@ -49,64 +154,4 @@ with others.
 	width: auto;
 	z-index: 100000;
 	/* Above WP toolbar. */
-}
-
-:root {
-    font-size: 22px;
-    --contentWidth: 900px;
-    --wideWidth: calc(1.25 * var(--contentWidth));
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-    line-height: var(--wp--preset--line-height--medium);
-}
-
-.wp-block-post-content {
-    --paddingHorizontal: 1em;
-    padding: 0 var(--paddingHorizontal);
-}
-
-.wp-block-post-content > * {
-    max-width: var(--contentWidth);
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.wp-block-post-content .alignwide {
-    width: calc(var(--wideWidth) + 2 * var(--paddingHorizontal));
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.wp-block-post-content .alignfull {
-    transform: translateX(calc(0px - var(--paddingHorizontal)));
-    width: calc(100% + 2 * var(--paddingHorizontal));
-    max-width: calc(100% + 2 * var(--paddingHorizontal));
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.aligncenter {
-    text-align: center;
-}
-
-.wp-block-post-content .alignleft {
-    float: left;
-    margin-left: calc(50% - var(--contentWidth) / 2);
-}
-  
-.wp-block-post-content .alignright {
-    float: right;
-    margin-right: calc(50% - var(--contentWidth) / 2)
-}       
-
-a {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-    font-weight: 600;
-}
-
-a:focus {
-    outline: 2px solid;
-    outline-offset: 2px;
-    border-bottom-color: transparent;
 }
