--- a/style.css
+++ b/style.css
@@ -90,10 +90,9 @@ h6 {
 
 .wp-site-blocks .alignfull {
     transform: translateX(calc(0px - var(--paddingHorizontal)));
-    width: calc(100% + 2 * var(--paddingHorizontal));
-    max-width: calc(100% + 2 * var(--paddingHorizontal));
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    max-width: 100%;
+    box-sizing: content-box;
 }
 
 .aligncenter {
