Firefox adds a top margin too :facepalm:

--- a/style.css
+++ b/style.css
@@ -31,10 +31,8 @@ Basic styles
 
 html,
 body {
-    margin-left: 0;
-    margin-right: 0;
-    padding-left: 0;
-    padding-right: 0;
+    margin: 0;
+    padding: 0;
 }
 
 * {
