tweak for nav block colors

--- a/style.css
+++ b/style.css
@@ -182,3 +182,10 @@ Accessibility
 	width: auto;
 	z-index: 100000; /* Above WP toolbar. */
 }
+
+/***************************************
+Blocks styles.
+***************************************/
+.wp-block-navigation:not(.has-background) .wp-block-navigation__container .wp-block-navigation-link:not(.has-text-color) {
+    color: currentColor;
+}
