--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,6 +1,7 @@
 :root {
     font-size: 22px;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+    font-weight: 300;
     line-height: var(--wp--preset--line-height--medium);
 }
 
