--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,5 +1,5 @@
 :root {
-    --contentWidth: 900px;
+    --contentWidth: calc((16px + 0.8vw) * 37);
     --wideWidth: calc(1.5 * var(--contentWidth));
 }
 
