--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,5 +1,5 @@
 :root {
-    font-size: 22px;
+    font-size: var(--wp--preset--font-size--normal);
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     font-weight: 300;
     line-height: var(--wp--preset--line-height--medium);
