--- a/styles/typography.css
+++ b/styles/typography.css
@@ -2,35 +2,34 @@
     font-size: var(--wp--preset--font-size--normal);
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
     font-weight: 300;
-    line-height: var(--wp--preset--line-height--medium);
 }
 
 h1 {
     font-size: var(--wp--preset--font-size--huge);
-    line-height: var(--wp--preset--line-height--small);
+    line-height: 1.4;
 }
 
 h2 {
     font-size: var(--wp--preset--font-size--large);
-    line-height: var(--wp--preset--line-height--small);
+    line-height: 1.4;
 }
 
 h3 {
     font-size: var(--wp--preset--font-size--medium);
-    line-height: var(--wp--preset--line-height--medium);
+    line-height: 1.55;
 }
 
 h4 {
     font-size: var(--wp--preset--font-size--normal);
-    line-height: var(--wp--preset--line-height--medium);
+    line-height: 1.55;
 }
 
 h5 {
     font-size: var(--wp--preset--font-size--small);
-    line-height: var(--wp--preset--line-height--large);
+    line-height: 1.8;
 }
 
 h6 {
     font-size: var(--wp--preset--font-size--small);
-    line-height: var(--wp--preset--line-height--large);
+    line-height: 1.8;
 }
