--- a/styles/blocks/core/navigation.css
+++ b/styles/blocks/core/navigation.css
@@ -1,3 +1,3 @@
-.wp-block-navigation:not(.has-background) .wp-block-navigation__container .wp-block-navigation-link:not(.has-text-color) {
-    color: currentColor;
+.wp-block-navigation:not(.has-background) .wp-block-navigation__container .wp-block-navigation-link:not(.has-text-color) { /* stylelint-disable-line selector-class-pattern */
+	color: currentColor;
 }
