--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,8 @@ body {
 }
 
 body {
-	background: var(--wp--preset--color--background);
+	background: var(--wp--preset--color--light);
+	color: var(--wp--preset--color--dark);
 	overflow-x: hidden;
 	line-height: 1.5;
 }
