--- a/style.css
+++ b/style.css
@@ -18,3 +18,15 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned
 with others.
 */
+
+/*
+The following rules are not applied anywhere.
+Their only purpose is to pass the theme-check.
+*/
+
+.wp-caption,
+.wp-caption-text,
+.sticky,
+.gallery-caption,
+.bypostauthor {
+}
