change theme description

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Version: 0.1
 Requires at least: 5.5
 Requires PHP: 7.0
 Tested up to: 5.5
-Description: FSE Theme
+Description: Experimental Full Site Editing (FSE) Theme
 Author: aristath
 Author URI: https://aristath.github.io
 License: GNU General Public License v2 or later
