--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ Author: aristath
 Author URI: https://aristath.github.io
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: blog
 
 All files, unless otherwise stated, are released under the GNU General Public
 License version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)
