--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ Author URI: https://aristath.github.io
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog
+Version: 0.3
 
 All files, unless otherwise stated, are released under the GNU General Public
 License version 2.0 (http://www.gnu.org/licenses/gpl-2.0.html)
