--- a/styles/typography.css
+++ b/styles/typography.css
@@ -35,6 +35,7 @@ h6 {
 
 figcaption {
 	font-size: var(--wp--preset--font-size--small);
+	margin-bottom: 2em;
 }
 
 .has-drop-cap:not(:focus)::first-letter {
