--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,15 +1,15 @@
 .has-light-color {
-    color: var(--wp--preset--color--light);
+	color: #f5f5f9;
 }
 
 .has-dark-color {
-    color: var(--wp--preset--color--dark);
+	color: #000;
 }
 
 .has-light-background-color {
-    background-color: var(--wp--preset--color--light);
+	background-color: #f5f5f9;
 }
 
 .has-dark-background-color {
-    background-color: var(--wp--preset--color--dark);
+	background-color: #000;
 }
