--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ Tested up to: 5.6
 Description: Experimental Full Site Editing (FSE) Theme
 Author: aristath
 Author URI: https://aristath.github.io
+Theme URI: https://github.com/aristath/q
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: blog, full-site-editing
